force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APT_Apply_Round_Off__c.field-meta.xml
<CustomField>
    <fullName>APT_Apply_Round_Off__c</fullName>
    <description>.</description>
    <formula>TEXT(Apttus_Config2__AttributeValueId__r.APT_Apply_Round_Off__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apply Round Off</label>
    <type>Text</type>
</CustomField>