force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APT_Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>APT_Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Billing_Account__c</referenceTo>
    <relationshipLabel>Line Items</relationshipLabel>
    <relationshipName>Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>