force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APT_Channel_OTC_Only__c.field-meta.xml
<CustomField>
    <fullName>APT_Channel_OTC_Only__c</fullName>
    <formula>IF(CONTAINS( APT_PostBillPay_Channel__c , &apos;OTC&apos;) &amp;&amp; (CONTAINS( APT_PostBillPay_Channel__c , &apos;Phone&apos;)  || CONTAINS( APT_PostBillPay_Channel__c , &apos;Internet&apos;) || CONTAINS( APT_PostBillPay_Channel__c , &apos;Scan and Pay&apos;)), &apos;No&apos;, IF(CONTAINS( APT_PostBillPay_Channel__c , &apos;OTC&apos;), &apos;Yes&apos;, &apos;No&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel OTC Only?</label>
    <type>Text</type>
</CustomField>