force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APT_Classification__c.field-meta.xml
<CustomField>
    <fullName>APT_Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Business</fullName>
                <default>true</default>
                <label>New Business</label>
            </value>
            <value>
                <fullName>New Business - One Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>