force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APT_CommunityUpdate_Delivery_Schedule__c.field-meta.xml
<CustomField>
    <fullName>APT_CommunityUpdate_Delivery_Schedule__c</fullName>
    <label>Delivery Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Peak</fullName>
            </value>
            <value>
                <fullName>Regular (Off Peak)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>