force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APT_Competitors__c.field-meta.xml
<CustomField>
    <fullName>APT_Competitors__c</fullName>
    <label>Competitors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>DHL Global</fullName>
            </value>
            <value>
                <fullName>DHL Express</fullName>
            </value>
            <value>
                <fullName>Fedex</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>Toll</fullName>
            </value>
            <value>
                <fullName>Quantium</fullName>
            </value>
            <value>
                <fullName>Australia Post</fullName>
            </value>
            <value>
                <fullName>Toll IPEC</fullName>
            </value>
            <value>
                <fullName>Fastways</fullName>
            </value>
            <value>
                <fullName>TNT</fullName>
            </value>
            <value>
                <fullName>Couriers Please</fullName>
            </value>
            <value>
                <fullName>Hunters Express</fullName>
            </value>
            <value>
                <fullName>Direct Freight</fullName>
            </value>
            <value>
                <fullName>Allied Express</fullName>
            </value>
            <value>
                <fullName>Border Express</fullName>
            </value>
            <value>
                <fullName>Other / Local Couriers</fullName>
            </value>
            <value>
                <fullName>Salmat</fullName>
            </value>
            <value>
                <fullName>PMP</fullName>
            </value>
            <value>
                <fullName>Walker Network</fullName>
            </value>
            <value>
                <fullName>Electronic</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>