force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APT_From_Time__c.field-meta.xml
<CustomField>
    <fullName>APT_From_Time__c</fullName>
    <formula>Apttus_Config2__AttributeValueId__r.APT_From_Time_00_00_AM_PM__c</formula>
    <label>From Time</label>
    <type>Text</type>
</CustomField>