force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APT_International_PCMS_or_CSP__c.field-meta.xml
<CustomField>
    <fullName>APT_International_PCMS_or_CSP__c</fullName>
    <formula>IF( Apttus_Config2__AttributeValueId__r.APT_International_Letters__c = TRUE, &quot;CSP&quot;,&quot;PCMS&quot;)</formula>
    <label>International PCMS or CSP</label>
    <type>Text</type>
</CustomField>