force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APT_Is_OPC_deleted__c.field-meta.xml
<CustomField>
    <fullName>APT_Is_OPC_deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is OPC deleted?</label>
    <type>Checkbox</type>
</CustomField>