force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APT_Lodgement_Zone_Selected__c.field-meta.xml
<CustomField>
    <fullName>APT_Lodgement_Zone_Selected__c</fullName>
    <label>Lodgement Zone Selected</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>