force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APT_Minimum_Monthly_Spend__c.field-meta.xml
<CustomField>
    <fullName>APT_Minimum_Monthly_Spend__c</fullName>
    <formula>Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Apttus_Proposal__Opportunity__r.APTMinimumMonthlySpend__c</formula>
    <label>Minimum Monthly Spend</label>
	<descripton>Minimum Monthly Spend</descripton>
	<inlineHelpText>Minimum Monthly Spend</inlineHelpText>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>