force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APT_Minimum_Quantity__c.field-meta.xml
<CustomField>
    <fullName>APT_Minimum_Quantity__c</fullName>
    <label>Minimum Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>