force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APT_Minimum_volume__c.field-meta.xml
<CustomField>
    <fullName>APT_Minimum_volume__c</fullName>
    <formula>Apttus_Config2__AttributeValueId__r.APT_Minimum_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minimum Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>