force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APT_Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>APT_Parent_Product__c</fullName>
    <formula>IF(Apttus_Config2__ProductId__r.Name = &apos;Express Road - STE&apos;, &quot;Road Express - STE&quot;,Apttus_Config2__ProductId__r.Name)</formula>
    <label>Parent Product</label>
    <type>Text</type>
</CustomField>