force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APT_PostBillPay_Gross_Settlement_fee__c.field-meta.xml
<CustomField>
    <fullName>APT_PostBillPay_Gross_Settlement_fee__c</fullName>
    <formula>TEXT(Apttus_Config2__AttributeValueId__r.APT_PostBillPay_Gross_Settlement_fee__c)</formula>
    <label>Gross Settlement Fee</label>
    <type>Text</type>
</CustomField>