force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APT_Pricing_Reason__c.field-meta.xml
<CustomField>
    <fullName>APT_Pricing_Reason__c</fullName>
    <label>Pricing Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>International Renewal</fullName>
            </value>
            <value>
                <fullName>International Customised Rates</fullName>
            </value>
            <value>
                <fullName>Standard Cat 5 &amp; 6 Domestic Rates</fullName>
            </value>
            <value>
                <fullName>Customised Domestic Rates Renewal / New</fullName>
            </value>
            <value>
                <fullName>Domestic Express Satchel Rates (flat rates)</fullName>
            </value>
            <value>
                <fullName>Competitor Threat/Competitor Pricing</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Lost Business</fullName>
            </value>
            <value>
                <fullName>Cubic Profile</fullName>
            </value>
            <value>
                <fullName>Future Date and Time (DCE)</fullName>
            </value>
            <value>
                <fullName>Oversize</fullName>
            </value>
            <value>
                <fullName>Features &amp; Charges i.e. Returns</fullName>
            </value>
            <value>
                <fullName>Customised Wine pricing</fullName>
            </value>
            <value>
                <fullName>Growth opportunity</fullName>
            </value>
            <value>
                <fullName>Strategic Business Opportunity</fullName>
            </value>
            <value>
                <fullName>Overweight</fullName>
            </value>
            <value>
                <fullName>Out of Specification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>