force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APT_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>APT_Product_Family__c</fullName>
    <formula>text (Apttus_Config2__ProductId__r.APT_Apttus_Product_Classification__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>