force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APT_Sales_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>APT_Sales_Unit_Price__c</fullName>
    <formula>Apttus_Config2__AttributeValueId__r.APT_Sales_Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>