force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APT_Sort_Sequence__c.field-meta.xml
<CustomField>
    <fullName>APT_Sort_Sequence__c</fullName>
    <description>Sort sequence to sort the the view rate card data on generated document based on the selection of selected lodgment zone on cart configuration page</description>
    <formula>IF(TEXT( Apttus_Config2__LineType__c ) == &quot;Product/Service&quot;,NULL,IF((CONTAINS(TEXT(Apttus_Config2__OptionId__r.APT_Apttus_Product_Classification__c ), &quot;APPC-Standard&quot;) || CONTAINS(TEXT(Apttus_Config2__OptionId__r.APT_Apttus_Product_Classification__c ), &quot;APPC-Premium&quot;) ),IF(CONTAINS(Apttus_Config2__OptionId__r.Name,&apos;Capital&apos;),1,IF(CONTAINS(Apttus_Config2__OptionId__r.Name, &apos;Metro&apos;),2,3)),NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sort Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>