force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APT_Tier_Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>APT_Tier_Adjustment_Type__c</fullName>
    <description>for startrack delegation</description>
    <formula>TEXT(Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.APT_Tier_Adjustment_Type__c)</formula>
    <label>Requested Adjustment</label>
    <type>Text</type>
</CustomField>