force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APT_Todays_Date__c.field-meta.xml
<CustomField>
    <fullName>APT_Todays_Date__c</fullName>
    <formula>TEXT(DAY(TODAY()))+&quot;-&quot;+CASE(MONTH(TODAY()), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;)+&quot;-&quot;+TEXT(YEAR(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Todays Date</label>
    <type>Text</type>
</CustomField>