force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APT_UnaddressedMail_Distirbution_Type__c.field-meta.xml
<CustomField>
    <fullName>APT_UnaddressedMail_Distirbution_Type__c</fullName>
    <label>Distirbution Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interstate Regular</fullName>
            </value>
            <value>
                <fullName>Interstate Select</fullName>
            </value>
            <value>
                <fullName>Intrastate Regular</fullName>
            </value>
            <value>
                <fullName>Intrastate Select</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>