force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APT_Unit_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>APT_Unit_Sales_Price__c</fullName>
    <label>Unit Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>