force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APT_Weight_Break_Up__c.field-meta.xml
<CustomField>
    <fullName>APT_Weight_Break_Up__c</fullName>
    <label>Weight Break Up</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-125g</fullName>
            </value>
            <value>
                <fullName>126g-175g</fullName>
            </value>
            <value>
                <fullName>176g-250g</fullName>
            </value>
            <value>
                <fullName>251g-300g</fullName>
            </value>
            <value>
                <fullName>301g-350g</fullName>
            </value>
            <value>
                <fullName>351g-400g</fullName>
            </value>
            <value>
                <fullName>401g-450g</fullName>
            </value>
            <value>
                <fullName>451g-500g</fullName>
            </value>
            <value>
                <fullName>501g-600g</fullName>
            </value>
            <value>
                <fullName>601g-700g</fullName>
            </value>
            <value>
                <fullName>701g-800g</fullName>
            </value>
            <value>
                <fullName>801g-900g</fullName>
            </value>
            <value>
                <fullName>901g-1000g</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>