force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/APTS_Charge_Type_Criteria__c.field-meta.xml
<CustomField>
    <fullName>APTS_Charge_Type_Criteria__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to validate contract pricing with charge type criteria</description>
    <label>Charge Type Criteria</label>
    <type>Checkbox</type>
</CustomField>