force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Apttus_Config2__IsCustomPricing__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsCustomPricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether custom pricing is in effect for the line item</description>
    <label>Is Custom Pricing</label>
    <type>Checkbox</type>
</CustomField>