force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Apttus_Config2__OptionGroupLabel__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__OptionGroupLabel__c</fullName>
    <description>The label of the option group</description>
    <formula>Apttus_Config2__ProductOptionId__r.Apttus_Config2__ProductOptionGroupId__r.Apttus_Config2__OptionGroupId__r.Apttus_Config2__Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Option Group</label>
    <type>Text</type>
</CustomField>