force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Apttus_Config2__PricingStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PricingStatus__c</fullName>
    <description>The pricing status</description>
    <label>Pricing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>