force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Apttus_Config2__PricingSteps__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PricingSteps__c</fullName>
    <description>The price calculation steps</description>
    <label>Pricing Steps</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>