force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Apttus_Config2__RelatedPercent__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RelatedPercent__c</fullName>
    <description>The list price expressed as a percentage of the related price list item</description>
    <label>Percent</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>